add list main command

--- a/index.html
+++ b/index.html
@@ -7,7 +7,58 @@
     <title>Document</title>
 </head>
 <body>
-
+    <ul>
+        <li>
+            <b>
+                git status - статус изменения файлов
+            </b>
+        </li>
+        <li>
+            <b>
+                git add - добавить все измененные файлы
+            </b>
+        </li>
+        <li>
+            <b>
+                git commit - сохранение 
+            </b>
+        </li>
+        <li>
+            <b>
+                git commit -m - сохранить сразу с описанием комита
+            </b>
+        </li>
+        <li>
+            <b>
+                git push - отправить данные на репозиторий (origin HEAD) - указание пути для сохранения
+            </b>
+        </li>
+        <li>
+            <b>
+                git branch - узнать на какой ветке я работаю
+            </b>
+        </li>
+        <li>
+            <b>
+                git checkout (название ветки) -  перейти на другую ветку
+            </b>
+        </li>
+        <li>
+            <b>
+                git checkout -b (название ветки) - создать новую ветку
+            </b>
+        </li>
+        <li>
+            <b>
+                git commit -a - сохранить измененные файлы, если не добавляли новые
+            </b>
+        </li>
+        <li>
+            <b>
+                git log - история всех изменений и тд
+            </b>
+        </li>
+    </ul>
     <script src="./index.js"></script>
 </body>
 </html>
