--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="adder_text" id="add">
+        <div class="main">
+            <button class="button" id="input">
+                <span class="btn_txt">put your text</span>
+            </button>
+            <button class="button" id="output">
+                <span class="btn_txt">delete last text</span>
+            </button>
+        </div>
+    </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
