add home work 16

--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+<div class="wrapper">
+  <div class="main">
+    <ul class="main__list">
+      <li class="mainn__item">
+        <a data-action="shoes" href="#" class="main__link">Shoes</a>
+      </li>
+      <li class="mainn__item">
+        <a data-action="hoody" href="#" class="main__link">Hoody</a>
+      </li>
+      <li class="mainn__item">
+        <a data-action="tshirt" href="#" class="main__link">T-shirts</a>
+      </li>
+      <li class="mainn__item">
+        <a data-action="jeans" href="#" class="main__link">Jeans</a>
+      </li>
+      <li class="mainn__item">
+        <a data-action="bag" href="#" class="main__link">Bags</a>
+      </li>
+      <li class="mainn__item">
+        <a data-action="hat" href="#" class="main__link">Hats</a>
+      </li>
+    </ul>
+  </div>
+  
+  <div class="catalog">
+    <div class="product__wrapp"></div>
+  </div>
+
+  <div class="popup">
+    <div class="popup__body">
+      <div class="popup__content">
+        <div href="#" class="popup__close">
+          <img src="icon/close_FILL1_wght400_GRAD0_opsz24.svg" alt="">
+        </div>
+        <h2 class="popup__text">Thanks for buy!</h2>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <script src="./index.js"></script>
 </body>
 </html>
