--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <form class="form">
+        <label for="input__lable">
+            <span class="input__span">Type id of post</span>
+            <input class="id__input" id="id" type="text">
+        </label>
+        <button type="submit" class="input__btn">Add post</button>
+    </form>
+    <div class="post__box"></div>
+    <div class="comment__wrapp"></div>
+
     <script src="./index.js"></script>
 </body>
 </html>
