--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -11,11 +14,12 @@
     <form class="form">
         <label for="input__lable">
             <span class="input__span">Type id of post</span>
-            <input class="id__input" id="id" type="text">
+            <input class="id__input" type="text">
         </label>
         <button type="submit" class="input__btn">Add post</button>
     </form>
     <div class="post__box"></div>
+    <button class="btn__comment">Show the comments</button>
     <div class="comment__wrapp"></div>
 
     <script src="./index.js"></script>
